packages/core/src/components/bce-button/bce-button.fab.scss
@import './bce-button.scss';

:host {
  @include bce-color-inherit();
}

:host([icon]) {
  @include elevate(0, false);
  height: 40px;
  margin: 0 10px 10px 0;
  z-index: 6;

  button {
    background-color: transparent;

    bce-icon {
      @include elevate(2, false);
      left: auto;
      right: 0;
      top: 2px;
      width: 35px;
      height: 35px;
      background-color: bce-color();
      color: bce-color-on();
      border-radius: 50%;
    }

    span {
      @include elevate(2, false);
      margin: 0 30px 0 0;
      padding: 5px 16px;
      background-color: bce-color(surface);
      color: bce-color-on(surface);
      text-transform: none;
      border-radius: 34px;
    }

    &:hover {
      bce-icon {
        background-color: bce-color(400);
      }

      span {
        background-color: bce-color(surface, 6);
      }
    }

    &:focus {
      bce-icon {
        outline: none;
        background-color: bce-color(300);
      }

      span {
        background-color: bce-color(surface, 8);
      }
    }
  }
}

:host([data-inactive]) {
  display: none;
}

:host([data-inline]) {
  flex: 0 0 50%;
  margin: 0;

  button {
    padding: 0;

    span {
      display: block;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      margin: 0 40px 0 5px;
    }
  }

  @include media-medium {
    button {
      span {
        margin: 0 5px 0 40px;
      }

      bce-icon {
        left: 0;
        right: auto;
      }
    }
  }
}

:host([data-inline]:nth-child(odd)) button {
  span {
    margin: 0 5px 0 40px;
  }

  bce-icon {
    left: 0;
    right: auto;
  }
}

